After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771327 - dh-window: do not disable javascript.
dh-window: do not disable javascript.
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2016-09-12 22:20 UTC by Mathieu Duponchelle
Modified: 2016-09-13 13:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dh-window: do not disable javascript. (1.01 KB, patch)
2016-09-12 22:20 UTC, Mathieu Duponchelle
committed Details | Review

Description Mathieu Duponchelle 2016-09-12 22:20:06 UTC
Some documentation may have render-time logic implemented in
javascript, and instead of disabling it and implementing it
ourselves, it makes more sense to simply allow javascript
altogether.
Comment 1 Mathieu Duponchelle 2016-09-12 22:20:11 UTC
Created attachment 335409 [details] [review]
dh-window: do not disable javascript.
Comment 2 Frederic Peters 2016-09-13 06:37:37 UTC
Comment on attachment 335409 [details] [review]
dh-window: do not disable javascript.

Let's get this in now.
Comment 3 Mathieu Duponchelle 2016-09-13 13:43:08 UTC
Attachment 335409 [details] pushed as 7da130e - dh-window: do not disable javascript.
Comment 4 Mathieu Duponchelle 2016-09-13 13:47:03 UTC
I've updated the proposed patches in https://bugzilla.gnome.org/review?bug=764441 by the way, some of these would still be valuable, the others I've marked as rejected :)