dh-window: do not disable javascript.

Some documentation may have render-time logic implemented in
javascript, and instead of disabling it and implementing it
ourselves, it makes more sense to simply allow javascript
altogether.

https://bugzilla.gnome.org/show_bug.cgi?id=771327